--- a/templates/fanDesign.html
+++ b/templates/fanDesign.html
@@ -74,9 +74,9 @@
                         <p class="text-start fs-5 m-0  fw-bold">Accessories</p>
                         
                            <ul class =  "fs-6  ps-4 m-1">
-                              {% for accesorio in proyecto.equipamientos.all %}
+                              {% for accesorio in proyecto.ventilador.accesorios.all %}
                                  <li>
-                                    {{accesorio.tipo.nombre}}
+                                    {{accesorio.nombre}}
                                  </li>
                               {% endfor %}
                            </ul>            
@@ -93,7 +93,7 @@
                   </div>
                   <div class="list-group border border-3 border-warning p-3 mb-2">
                      <div class="row">
-                        <p class="text-start fs-5 m-0 fw-bold">Design Desing</p>
+                        <p class="text-start fs-5 m-0 fw-bold">Design frequency</p>
                         <p class="text-start fs-6  ps-4 m-1"> {{proyecto.curva_diseno.densidad}} kg/m<sup>3</sup> </p>
                      </div>
                   </div>
