--- a/templates/fanReal.html
+++ b/templates/fanReal.html
@@ -45,10 +45,10 @@
             <div class="btn-group" role="group" aria-label="Basic radio toggle button group" id  = "chart_type"> 
 
                <input type="radio" class="btn-check" name="btnradioChart" id="t_preassure" autocomplete="off"   checked >
-               <label class="btn btn-outline-secondary" for="t_preassure"  onclick="changeDataChart({{total_pressure |safe}})" >Total Preassure</label>
+               <label class="btn btn-outline-secondary" for="t_preassure"  onclick="changeDataChart({{total_pressure |safe}})" >Total Pressure</label>
 
                <input type="radio" class="btn-check" name="btnradioChart" id="s_pressure" autocomplete="off"  >
-               <label class="btn btn-outline-secondary" for="s_pressure"    onclick="changeDataChart({{static_pressure |safe}})" >Static Preassure</label>
+               <label class="btn btn-outline-secondary" for="s_pressure"    onclick="changeDataChart({{static_pressure |safe}})" >Static Pressure</label>
 
                <input type="radio" class="btn-check" name="btnradioChart" id="power" autocomplete="off" >
                <label class="btn btn-outline-secondary" for="power" onclick="changeDataChart({{power |safe}})" >Power</label>
