--- a/templates/widgets/dbs/curvaDiseno.html
+++ b/templates/widgets/dbs/curvaDiseno.html
@@ -9,13 +9,13 @@
             {{ form }}
 
             <div class="row mb-3 d-flex justify-content-between">
-               <div class="col-4 m-1 ps-2">
+               <div class="col m-1 ps-2">
                   <label for="cau">Caudal (m³/s)</label>
                </div>
-               <div class="col-4 m-1 ps-2">
+               <div class="col m-1 ps-2">
                   <label for="cau">Presión Total (Pa)</label>
                </div>
-               <div class="col-4 m-1 ps-2">
+               <div class="col m-1 ps-2">
                   <label for="cau">Power (kW)</label>
                </div>
             </div>
