--- a/templates/widgets/dbs/equipDiesel.html
+++ b/templates/widgets/dbs/equipDiesel.html
@@ -16,7 +16,7 @@
    const potencia = document.getElementById('id_potencia');
    const qr_fabricante = document.getElementById('id_qr_fabricante');
    function Funcion(){
-      qr_calculado.value = (potencia.value*2.83)/(60*0.746);
+      qr_calculado.value = (potencia.value*2.83)/(60*0.746).toFixed(1);
       qr_fabricante.value = 0;
    }
    function Funcion2(){
