--- a/templates/widgets/fanDesignCurve/staticPreassure.html
+++ b/templates/widgets/fanDesignCurve/staticPreassure.html
@@ -1,7 +1,7 @@
    <div class="row">
       <div class="col">
-         <button class="btn btn-outline-secondary  mt-3" role="button" onclick="changeChartType('total_pressure')">Total Preassure</button>
-         <button class="btn btn-secondary  mt-3 ms-1" role="button" onclick="changeChartType('static_pressure')">Static Preassure</button>
+         <button class="btn btn-outline-secondary  mt-3" role="button" onclick="changeChartType('total_pressure')">Total Pressure</button>
+         <button class="btn btn-secondary  mt-3 ms-1" role="button" onclick="changeChartType('static_pressure')">Static Pressure</button>
          <button class="btn btn-outline-secondary  mt-3 ms-1" role="button" onclick="changeChartType('power')">Power</button>
       </div>
    </div>
