--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -14,8 +14,10 @@
    {% include "widgets/home/projectDescription.html" %}
   </div>
 
-  <div class="col-6 text-center">
-    <img src="{{ Project.ventilador.img_ventilador.url }}" alt="Imagen del ventilador" class="img-fluid rounded" style="max-width: 100%;">
+  <div class="col-6 text-center ">
+    <div class="card p-4 shadow-lg ">
+      <img src="{{ Project.ventilador.img_ventilador.url }}" alt="Imagen del ventilador" class="img-fluid rounded" style="max-width: 100%;">
+    </div>
   </div>
 </div>
 
@@ -41,23 +43,21 @@
           {% for project in Projects %}
           <tr>
             <td>{{ project.ventilador }}</td>
-            <td><a href="">Curva diseño</a></td>
+            <td>{{project.curva_diseno}}</td>
             <td>{{ project.ducto }}</td>
             <td>
               <ul>
                 {% for equip in project.equipamientos.all %}
-                <li><a href="">{{ equip }}</a></li>
+                <li>{{ equip }}</li>
                 {% endfor %}
               </ul>
             </td>
-            <td>{{ project.codo }}</td>
-            <td>{{ project.caudal }}</td>
-            <td>{{ project.sistema_partida }}</td>
+            <td>{{ project.codos }}</td>
+            <td>{{ project.caudal_requerido }}</td>
+            <td>{{ project.s_partida }}</td>
             <td>
-              <a href="">
-                <i class="fas fa-edit"></i>
-              </a>
-              <a href="">
+
+              <a href="{% url 'settings:delete-project' project.id %}" class="btn btn-outline-danger">
                 <i class="fas fa-trash-alt"></i>
               </a>
             </td>
