--- a/templates/widgets/dbs/navbar.html
+++ b/templates/widgets/dbs/navbar.html
@@ -4,5 +4,6 @@
         <a href="?type=curva_diseno" class="btn {% if request.GET.type == 'curva_diseno' %}btn-secondary{% else %}btn-outline-secondary{% endif %} mt-2 ms-1">+ Curva Diseño</a>
         <a href="?type=ducto" class="btn {% if request.GET.type == 'ducto' %}btn-secondary{% else %}btn-outline-secondary{% endif %} mt-2 ms-1">+ Ducto</a>
         <a href="?type=equip_diesel" class="btn {% if request.GET.type == 'equip_diesel' %}btn-secondary{% else %}btn-outline-secondary{% endif %} mt-2 ms-1">+ Equipamiento Diesel</a>
+        <a href="{% url 'dbs:create-caracteristica' %}" class="btn {% if request.path == 'create-caracteristica' %}btn-secondary{% else %}btn-outline-secondary{% endif %} mt-2 ms-1">+ Caracteristica del ventilador</a>
     </div>
 </div>
