--- a/templates/widgets/fanRealCurve/staticPreassure.html
+++ b/templates/widgets/fanRealCurve/staticPreassure.html
@@ -1,7 +1,7 @@
    <div class="row">
       <div class="col">
-         <button class="btn btn-outline-secondary" role="button" onclick="changeChartType('total_pressure')">Total Preassure</button>
-         <button class="btn btn-secondary ms-1" role="button" onclick="changeChartType('static_pressure')">Static Preassure</button>
+         <button class="btn btn-outline-secondary" role="button" onclick="changeChartType('total_pressure')">Total Pressure</button>
+         <button class="btn btn-secondary ms-1" role="button" onclick="changeChartType('static_pressure')">Static Pressure</button>
          <button class="btn btn-outline-secondary ms-1" role="button" onclick="changeChartType('power')">Power</button>
       </div>
    </div>
