se ha realizado cambios en diseño y mejora del frontend

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -41,3 +41,13 @@ code {
 @media print {
   .footer { display: none!important; }
 }
+
+/* cursores */
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
+.cursor-not-allowed {
+  cursor: not-allowed;
+}
