--- a/templates/widgets/dbs/curvaDiseno.html
+++ b/templates/widgets/dbs/curvaDiseno.html
@@ -3,7 +3,7 @@
 <div class="row h-100 justify-content-center align-items-center">
    <div class="col-6">
       <div class="card p-4">
-         <h2 class="text-center">Nueva Curva Diseño</h2>
+         <h2 class="text-center">Nueva curva caracteristica ventilador</h2>
          <form method="POST" id="id_cd_p">
             {% csrf_token %}
             {{ form }}
@@ -16,7 +16,7 @@
                   <label for="cau">Presión Total (Pa)</label>
                </div>
                <div class="col m-1 ps-2">
-                  <label for="cau">Power (kW)</label>
+                  <label for="cau">Potencia (kW)</label>
                </div>
             </div>
 
