--- a/templates/fanDesign.html
+++ b/templates/fanDesign.html
@@ -8,11 +8,9 @@
 
 {% block head_title %}{# Page title. Base page has " | VentApp"; follow this pattern for sub-page titling #}{% endblock %}
 
-{# Add classes to the main <div> wrapping body content #}
 {% block body_container_classes %}mx-0 w-100 mw-100{% endblock %}
 
 {% block body_content %}
-{# All your page content goes here! #}
    
     <style>
             .d3-graphic{
@@ -30,11 +28,9 @@
             .d3-graphic{
                height: 60vh;
             }
-
       }
             
       </style>
-
 
    <div class="container-fluid h-75 p-0">
 
@@ -53,85 +49,70 @@
 
          <div class="col-lg-3 col-sm-12 h-100">
             <div class="row justify-content-center align-items-center">
-            <div class="row justify-content-center align-items-center">
-               <div class="col">
-                  {#  Model #}
-                  <div class="list-group border border-3 border-warning p-3 mb-2">
-                     <div class="row">
-                        <p class="text-center fs-4 fw-bold m-0  fw-bold ">{{proyecto.ventilador.modelo}}</p>
-                     </div>
-                  </div>
-                  {#  Model #}
-                  <div class="list-group border border-3 border-warning p-3 mb-2">
-                     <div class="row">
-                        <p class="text-start fs-5 m-0  fw-bold">Blade Angle</p>
-                        <p class="text-start fs-6  ps-4 m-1">  {{proyecto.curva_diseno.angulo}} ° </p>
-                     </div>
-                  </div>
-                  {#  Blade angle #}
-                  <div class="list-group border border-3 border-warning p-3 mb-2">
-                     <div class="row">
-                        <p class="text-start fs-5 m-0  fw-bold">Accessories</p>
-                        
-                           <ul class =  "fs-6  ps-4 m-1">
-                              {% for accesorio in proyecto.ventilador.accesorios.all %}
-                                 <li>
-                                    {{accesorio.nombre}}
-                                 </li>
-                              {% endfor %}
-                           </ul>            
-                       
-                        
-                           
-                     </div>
-                  </div>
-                  <div class="list-group border border-3 border-warning p-3 mb-2">
-                     <div class="row">
-                        <p class="text-start fs-5 m-0 fw-bold">Design Density</p>
-                        <p class="text-start fs-6  ps-4 m-1"> {{proyecto.curva_diseno.densidad}} kg/m<sup>3</sup> </p>
-                     </div>
-                  </div>
-                  <div class="list-group border border-3 border-warning p-3 mb-2">
-                     <div class="row">
-                        <p class="text-start fs-5 m-0 fw-bold">Design frequency</p>
-                        <p class="text-start fs-6  ps-4 m-1"> {{proyecto.curva_diseno.densidad}} kg/m<sup>3</sup> </p>
-                     </div>
-                  </div>
-                  <div class="list-group border border-3 border-warning p-3 mb-2">
-                     <div class="row">
-                        <p class="text-start fs-5 m-0 fw-bold">Motor Power</p>
-                        <p class="text-start fs-6  ps-4 m-1">  {{proyecto.curva_diseno.densidad}} </p>
-                     </div>
-                  </div>
-                  <div class="list-group border border-3 border-warning p-3 mb-2">
-                     <div class="row">
-                        <p class="text-start fs-5 m-0 fw-bold">Peak Resistance</p>
-                        <p class="text-start fs-6  ps-4 m-1">  {{peak_resistance}}%</p>
-                     </div>
-                  </div>
-                  <div class="list-group border border-3 border-warning p-3 mb-2">
-                     <div class="row">
-                        <p class="text-start fs-5 m-0 fw-bold">Peak Pressure</p>
-                        <p class="text-start fs-6  ps-4 m-1">  {{peak_pressure}}% </p>
-                     </div>
-                  </div>
-
-
-                     </div>
-                  </div>
-
-               </div>
+                <div class="col">
+                    <div class="list-group border border-3 border-warning p-3 mb-2">
+                        <div class="row">
+                            <p class="text-center fs-4 fw-bold m-0  fw-bold ">{{proyecto.ventilador.modelo}}</p>
+                        </div>
+                    </div>
+                    <div class="list-group border border-3 border-warning p-3 mb-2">
+                        <div class="row">
+                            <p class="text-start fs-5 m-0  fw-bold">Ángulo de las palas</p>
+                            <p class="text-start fs-6  ps-4 m-1">  {{proyecto.curva_diseno.angulo}} ° </p>
+                        </div>
+                    </div>
+                    <div class="list-group border border-3 border-warning p-3 mb-2">
+                        <div class="row">
+                            <p class="text-start fs-5 m-0  fw-bold">Accesorios</p>
+                            <ul class="fs-6  ps-4 m-1">
+                                {% for accesorio in proyecto.ventilador.accesorios.all %}
+                                    <li>
+                                        {{accesorio.nombre}}
+                                    </li>
+                                {% endfor %}
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="list-group border border-3 border-warning p-3 mb-2">
+                        <div class="row">
+                            <p class="text-start fs-5 m-0 fw-bold">Densidad de diseño</p>
+                            <p class="text-start fs-6  ps-4 m-1"> {{proyecto.curva_diseno.densidad}} kg/m<sup>3</sup> </p>
+                        </div>
+                    </div>
+                    <div class="list-group border border-3 border-warning p-3 mb-2">
+                        <div class="row">
+                            <p class="text-start fs-5 m-0 fw-bold">Frecuencia de diseño</p>
+                            <p class="text-start fs-6  ps-4 m-1"> {{proyecto.curva_diseno.frecuencia}} Hz </p>
+                        </div>
+                    </div>
+                    <div class="list-group border border-3 border-warning p-3 mb-2">
+                        <div class="row">
+                            <p class="text-start fs-5 m-0 fw-bold">Potencia del motor</p>
+                            <p class="text-start fs-6  ps-4 m-1">  {{proyecto.ventilador.hp}} </p>
+                        </div>
+                    </div>
+                    <div class="list-group border border-3 border-warning p-3 mb-2">
+                        <div class="row">
+                            <p class="text-start fs-5 m-0 fw-bold">Resistencia máxima</p>
+                            <p class="text-start fs-6  ps-4 m-1">  {{peak_resistance}}%</p>
+                        </div>
+                    </div>
+                    <div class="list-group border border-3 border-warning p-3 mb-2">
+                        <div class="row">
+                            <p class="text-start fs-5 m-0 fw-bold">Presión máxima</p>
+                            <p class="text-start fs-6  ps-4 m-1">  {{peak_pressure}}% </p>
+                        </div>
+                    </div>
+                </div>
             </div>
+        </div>
         
-            </div>
-         </div>
         
       
 {% endblock %}
 
 {% block body_js %}
 
-{# Remember we've already got jQuery and Bootstrap bundle with Popper loaded. #}
    <script src="{% static 'js/d3.v7.js' %}"></script>
    {% comment %} <script src="{% static 'js/scatterplot.js' %}"></script> {% endcomment %}
    <script src="{% static 'js/fancurveplot.js' %}"></script>
@@ -147,10 +128,13 @@
       document.addEventListener("DOMContentLoaded",
          function() {
             if ("{{ chart_type }}" == "total_pressure"){
+
                createFanChart(dataV, 'total_pressure', promedios, dataV2);
             } else if ("{{ chart_type }}" == "static_pressure"){
+
                createFanChart(dataV, 'static_pressure', promedios, dataV2);
             } else if ("{{ chart_type }}" == "power"){
+
                createFanChart(dataV, 'power', promedios, dataV2);
             }
          });
