--- a/templates/fanReal.html
+++ b/templates/fanReal.html
@@ -6,8 +6,6 @@
 
 {% block head_css %}{# additional <link> tags for CSS #}{% endblock %}
 
-{% block head_js %}{# <script defer> tags for deferred JS only #}{% endblock head_js %}
-
 {% block head_title %}{# Page title. Base page has " | VentApp"; follow this pattern for sub-page titling #}{% endblock %}
 
 {# Add classes to the main <div> wrapping body content #}
@@ -15,117 +13,149 @@
 
 {% block body_content %}
 {# All your page content goes here! #}
+   
+    <style>
+            .d3-graphic{
+               height: 20rem;
+            }
 
- 
- <div class="container-fluid h-100">
-      <div class="row mb-2"   >
-         <div class= "col">
-            <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
+            @media (max-width: 576px) {
+               .d3-graphic{
+               height: 15rem;
+               width: 25rem;
+            }
 
-               <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off"    {% if section == 'current_Operation' %}checked{% endif %} >
-               <label class="btn btn-outline-secondary" for="btnradio1" onclick="sectionSelector('current_Operation')"  >Current Operation </label>
+         }
+         @media (min-width: 992px) {
+            .d3-graphic{
+               height: 60vh;
+            }
 
-               <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off"  {% if section == 'last_Measurement' %}checked{% endif %} >
-               <label class="btn btn-outline-secondary" for="btnradio2"  onclick="sectionSelector('last_Measurement')"  >Last Measurement</label>
-
-               <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off"  {% if section == 'average_Curve' %}checked{% endif %} >
-               <label class="btn btn-outline-secondary" for="btnradio3" onclick="sectionSelector('average_Curve')" >Average Curve</label>
+      }
             
-            </div>
-      </div>
-      
-   </div>
+      </style>
 
 
+   <div class="container-fluid h-75 p-0">
 
-   <div class="row mb-2"   >
-      <div class= "col">
-
-
-            <div class="btn-group" role="group" aria-label="Basic radio toggle button group" id  = "chart_type"> 
-
-               <input type="radio" class="btn-check" name="btnradioChart" id="t_preassure" autocomplete="off"   checked >
-               <label class="btn btn-outline-secondary" for="t_preassure"  onclick="changeDataChart({{total_pressure |safe}})" >Total Pressure</label>
-
-               <input type="radio" class="btn-check" name="btnradioChart" id="s_pressure" autocomplete="off"  >
-               <label class="btn btn-outline-secondary" for="s_pressure"    onclick="changeDataChart({{static_pressure |safe}})" >Static Pressure</label>
-
-               <input type="radio" class="btn-check" name="btnradioChart" id="power" autocomplete="off" >
-               <label class="btn btn-outline-secondary" for="power" onclick="changeDataChart({{power |safe}})" >Power</label>
-
-            </div>
-      </div>
-
-   </div>
-
-
-
-      <div class="row " style="height: calc(100% - 40px);">
-         <div class="col-9 border-end border-3 border-dark h-100">
-               {% include "widgets/fanRealCurve/graphic.html" %}
+      <div class="d-sm-flex flex-sm-column d-lg-flex  flex-lg-row ">
+         <div class="col-lg-8 col-sm-12  ms-0 px-n2 mb-3">
+            {% if chart_type == 'total_pressure' %}
+               {% include "widgets/fanDesignCurve/totalPreassure.html" %}
+            {% elif chart_type == 'static_pressure' %}
+               {% include "widgets/fanDesignCurve/staticPreassure.html" %}
+            {% elif chart_type == 'power' %}
+               {% include "widgets/fanDesignCurve/power.html" %}
+            {% else %}
+               {% include "widgets/fanDesignCurve/totalPreassure.html" %}
+            {% endif %}
          </div>
 
-         <div class="col-3">
+         <div class="col-lg-3 col-sm-12 h-100">
             <div class="row justify-content-center align-items-center">
-               <div class="col-12 col-md-10 col-xl-8">
+            <div class="row justify-content-center align-items-center">
+               <div class="col">
                   {#  Model #}
                   <div class="list-group border border-3 border-warning p-3 mb-2">
                      <div class="row">
-                        <p class="text-center fs-4 fw-bold m-0 ">Fan 1</p>
+                        <p class="text-center fs-4 fw-bold m-0  fw-bold ">{{proyecto.ventilador.modelo}}</p>
                      </div>
                   </div>
                   {#  Model #}
                   <div class="list-group border border-3 border-warning p-3 mb-2">
                      <div class="row">
-                        <p class="text-start fs-5 m-0">JetStream AXT0800</p>
+                        <p class="text-start fs-5 m-0  fw-bold">Blade Angle</p>
+                        <p class="text-start fs-6  ps-4 m-1">  {{proyecto.curva_diseno.angulo}} ° </p>
                      </div>
                   </div>
                   {#  Blade angle #}
                   <div class="list-group border border-3 border-warning p-3 mb-2">
                      <div class="row">
-                        <p class="text-start fs-5 m-0">Density</p>
-                        <p class="text-start fs-6 ps-4 m-1">&#8226; 1.08 kg/m&#179;</p>
+                        <p class="text-start fs-5 m-0  fw-bold">Accessories</p>
+                        
+                           <ul class =  "fs-6  ps-4 m-1">
+                              {% for accesorio in proyecto.ventilador.accesorios.all %}
+                                 <li>
+                                    {{accesorio.nombre}}
+                                 </li>
+                              {% endfor %}
+                           </ul>            
+
+                     </div>
+                  </div>
+                  <div class="list-group border border-3 border-warning p-3 mb-2">
+                     <div class="row">
+                        <p class="text-start fs-5 m-0 fw-bold">Design Density</p>
+                        <p class="text-start fs-6  ps-4 m-1"> {{proyecto.curva_diseno.densidad}} kg/m<sup>3</sup> </p>
+                     </div>
+                  </div>
+                  <div class="list-group border border-3 border-warning p-3 mb-2">
+                     <div class="row">
+                        <p class="text-start fs-5 m-0 fw-bold">Design frequency</p>
+                        <p class="text-start fs-6  ps-4 m-1"> {{proyecto.curva_diseno.densidad}} kg/m<sup>3</sup> </p>
+                     </div>
+                  </div>
+                  <div class="list-group border border-3 border-warning p-3 mb-2">
+                     <div class="row">
+                        <p class="text-start fs-5 m-0 fw-bold">Motor Power</p>
+                        <p class="text-start fs-6  ps-4 m-1">  {{proyecto.ventilador.hp}} </p>
+                     </div>
+                  </div>
+                  <div class="list-group border border-3 border-warning p-3 mb-2">
+                     <div class="row">
+                        <p class="text-start fs-5 m-0 fw-bold">Peak Resistance</p>
+                        <p class="text-start fs-6  ps-4 m-1">  {{peak_resistance}}%</p>
+                     </div>
+                  </div>
+                  <div class="list-group border border-3 border-warning p-3 mb-2">
+                     <div class="row">
+                        <p class="text-start fs-5 m-0 fw-bold">Peak Pressure</p>
+                        <p class="text-start fs-6  ps-4 m-1">  {{peak_pressure}}% </p>
+                     </div>
+                  </div>
                      </div>
                   </div>
 
                </div>
             </div>
+        
+            </div>
          </div>
-      </div>
-   </div>
+        
+      
 {% endblock %}
 
 {% block body_js %}
-{# Inline or other types of JS <script> tags here. #}
+
 {# Remember we've already got jQuery and Bootstrap bundle with Popper loaded. #}
    <script src="{% static 'js/d3.v7.js' %}"></script>
-   <script src="{% static 'js/scatterplot.js' %}"></script>
+   {% comment %} <script src="{% static 'js/scatterplot.js' %}"></script> {% endcomment %}
+   <script src="{% static 'js/fancurveplot.js' %}"></script>
+
 
    <script type="text/javascript">
       
-      const dataV = {{ total_pressure | safe }};
-
-      
-
-      document.addEventListener("DOMContentLoaded", function() { createChartScatterplot(dataV); });
-
-      
+      const dataV = {{ scatter_data|safe }};
+      const promedios = {{ c }};
+      const dataV2 = {{scatter_data2|safe}};
+      {% comment %} const curva_dis = {{VenCurvaDis}}; {% endcomment %}
+      // Call the function initially
+      document.addEventListener("DOMContentLoaded",
+         function() {
+            if ("{{ chart_type }}" == "total_pressure"){
+               createFanChart(dataV, 'total_pressure', promedios, dataV2);
+            } else if ("{{ chart_type }}" == "static_pressure"){
+               createFanChart(dataV, 'static_pressure', promedios, dataV2);
+            } else if ("{{ chart_type }}" == "power"){
+               createFanChart(dataV, 'power', promedios, dataV2);
+            }
+         });
+      // Call the function on window resize
+      window.addEventListener("resize", function() { updateFanChart(dataV); });
       // Cambiar vista
       function changeChartType(type) {
-         window.location.href = "{% url 'fanreal:fanreal' %}?chart_type=" + type;
+         window.location.href = "{% url 'fandesign:fandesign' %}?chart_type=" + type;
       }
-      
-      function sectionSelector(section) {
-         window.location.href = "{% url 'fanreal:fanreal' %}?section=" + section;
-      }
-
-      function changeDataChart(dataV){
-         console.log('update')
-         updateData(dataV);
-      }
-
-
-      
    </script> 
 {% endblock %}
 
