--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,92 +1,100 @@
 {% extends "base.html" %}
-
+{% load static %}
 {% block head_title %}Home{% endblock %}
 {% block body_container_classes %}mx-0 w-100 mw-100{% endblock %}
 {% block body_content %}
-<div class="row">
-  <h1 class="display-4 text-primary mb-4">
-    <i class="fas fa-fan"></i> Bienvenido a la plataforma AFD!
-  </h1>
-</div>
-
-<div class="row">
-  <div class="col-6">
-   {% include "widgets/home/projectDescription.html" %}
+  <div class="row">
+    <h1 class="display-4 text-primary mb-4">
+      <i class="fas fa-fan"></i> Bienvenido a la plataforma AFD!
+    </h1>
   </div>
+  <div class="row">
+    <h3 class=" text-success mb-4">
+      Estado del semaforo
+    </h3>
+  </div>
+  {% include "widgets/home/semaforo.html" %}
+  <div class="row">
+    <div class="col-6">
+    {% include "widgets/home/projectDescription.html" %}
+    </div>
 
-  <div class="col-6 text-center ">
-    <div class="card p-4 shadow-lg ">
-      <img src="{{ Project.ventilador.img_ventilador.url }}" alt="Imagen del ventilador" class="img-fluid rounded" style="max-width: 100%;">
+    <div class="col-6 text-center ">
+      <div class="card p-4 shadow-lg ">
+        <img src="{{ Project.ventilador.img_ventilador.url }}" alt="Imagen del ventilador" class="img-fluid rounded" style="max-width: 100%;">
+      </div>
     </div>
   </div>
-</div>
 
-{% if Projects %}
-<div class="row mt-4">
-  <div class="col">
-    <h3>Otros proyectos</h3>
-    <div class="table-responsive">
-      <table class="table">
-        <thead>
-          <tr>
-            <th>Ventilador</th>
-            <th>Curva diseño</th>
-            <th>Ducto</th>
-            <th>Equipamientos</th>
-            <th>Codos</th>
-            <th>Caudal</th>
-            <th>Sistema de partida</th>
-            <th>Opciones</th>
-          </tr>
-        </thead>
-        <tbody>
-          {% for project in Projects %}
-          <tr>
-            <td>{{ project.ventilador }}</td>
-            <td>{{project.curva_diseno}}</td>
-            <td>{{ project.ducto }}</td>
-            <td>
-              <ul>
-                {% for equip in project.equipamientos.all %}
-                <li>{{ equip }}</li>
-                {% endfor %}
-              </ul>
-            </td>
-            <td>{{ project.codos }}</td>
-            <td>{{ project.caudal_requerido }}</td>
-            <td>{{ project.s_partida }}</td>
-            <td>
+  {% if Projects %}
+  <div class="row mt-4">
+    <div class="col">
+      <h3>Otros proyectos</h3>
+      <div class="table-responsive">
+        <table class="table">
+          <thead>
+            <tr>
+              <th>Ventilador</th>
+              <th>Curva diseño</th>
+              <th>Ducto</th>
+              <th>Equipamientos</th>
+              <th>Codos</th>
+              <th>Caudal</th>
+              <th>Sistema de partida</th>
+              <th>Opciones</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for project in Projects %}
+            <tr>
+              <td>{{ project.ventilador }}</td>
+              <td>{{project.curva_diseno}}</td>
+              <td>{{ project.ducto }}</td>
+              <td>
+                <ul>
+                  {% for equip in project.equipamientos.all %}
+                  <li>{{ equip }}</li>
+                  {% endfor %}
+                </ul>
+              </td>
+              <td>{{ project.codos }}</td>
+              <td>{{ project.caudal_requerido }}</td>
+              <td>{{ project.s_partida }}</td>
+              <td>
 
-              <a href="{% url 'settings:delete-project' project.id %}" class="btn btn-outline-danger">
-                <i class="fas fa-trash-alt"></i>
-              </a>
-            </td>
-          </tr>
-          {% endfor %}
-        </tbody>
-      </table>
+                <a href="{% url 'settings:delete-project' project.id %}" class="btn btn-outline-danger">
+                  <i class="fas fa-trash-alt"></i>
+                </a>
+              </td>
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+      </div>
     </div>
   </div>
-</div>
-{% endif %}
+  {% endif %}
 
-<script>
-  document.addEventListener("DOMContentLoaded", function() {
-    const fieldsets = document.querySelectorAll(".toggle-fieldset");
-    
-    fieldsets.forEach(function(fieldset) {
-      const legend = fieldset.querySelector("legend");
-      const content = fieldset.querySelector("table, p");
+  <script>
+    document.addEventListener("DOMContentLoaded", function() {
+      const fieldsets = document.querySelectorAll(".toggle-fieldset");
+      
+      fieldsets.forEach(function(fieldset) {
+        const legend = fieldset.querySelector("legend");
+        const content = fieldset.querySelector("table, p");
 
-      // Initially hide the fieldset content
-      content.style.display = "none";
+        // Initially hide the fieldset content
+        content.style.display = "none";
 
-      // Toggle visibility when the legend is clicked
-      legend.addEventListener("click", function() {
-        content.style.display = content.style.display === "none" ? "block" : "none";
+        // Toggle visibility when the legend is clicked
+        legend.addEventListener("click", function() {
+          content.style.display = content.style.display === "none" ? "block" : "none";
+        });
       });
     });
-  });
-</script>
+  </script> 
 
 {% endblock %}
+{% block body_js %}
+    <script src="{% static 'js/home/semaforo.js' %}"></script>
+{% endblock body_js %}
