--- a/templates/widgets/currentStatus/current_data.html
+++ b/templates/widgets/currentStatus/current_data.html
@@ -1,34 +1,34 @@
 <div class="row py-4 d-flex justify-content-evenly align-items-center">
    <div class="col-sm-8 col-md-5  m-2 p-2  d-flex border border-3 border-success">
-      <div class="col  border-end border-3 border-success">Presión total ventilador</div>
+      <div class="col  border-end border-3 border-success">Presión total ventilador (PH)</div>
       <div class="col  text-center m-auto" id="pt1"></div>
    </div>
    <div class="col-sm-8 col-md-5  m-2 p-2  d-flex border border-3 border-success">
-      <div class="col border-end border-3 border-success">Caudal ventilador &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
+      <div class="col border-end border-3 border-success">Caudal ventilador (m³/s) &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
       <div class="col text-center m-auto" id="q1"></div>
    </div>
    <div class="col-sm-8 col-md-5  m-2 p-2  d-flex border border-3 border-success">
-      <div class="col border-end border-3 border-success">Potencia ventilador &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
+      <div class="col border-end border-3 border-success">Potencia ventilador (Kw) &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
       <div class="col text-center m-auto" id="power"></div> 
    </div>
    <div class="col-sm-8 col-md-5  m-2 p-2  d-flex border border-3 border-success">
-      <div class="col border-end border-3 border-success">Caudal en frente &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
+      <div class="col border-end border-3 border-success">Caudal en frente (m³/s) &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
       <div class="col text-center m-auto" id="qf"></div>
    </div>
    <div class="col-sm-8 col-md-5  m-2 p-2  d-flex border border-3 border-success">
-      <div class="col border-end border-3 border-success">Presión Estática &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
+      <div class="col border-end border-3 border-success">Presión Estática ventilador  (PH) &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
       <div class="col text-center m-auto" id="pe"></div>
    </div>
    <div class="col-sm-8 col-md-5  m-2 p-2  d-flex border border-3 border-success">
-      <div class="col border-end border-3 border-success">Presión dinámica &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
+      <div class="col border-end border-3 border-success">Presión dinámica ventilador (PH) &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
       <div class="col text-center m-auto" id="pd"></div>
    </div>
    <div class="col-sm-8 col-md-5  m-2 p-2  d-flex border border-3 border-success">
-      <div class="col border-end border-3 border-success">Perdida de choque &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
+      <div class="col border-end border-3 border-success">Pérdida de choque de sistema (PH) &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
       <div class="col text-center m-auto" id="pch"></div>
    </div>
    <div class="col-sm-8 col-md-5  m-2 p-2  d-flex border border-3 border-success">
-      <div class="col border-end border-3 border-success">Perdidas fricionales &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
+      <div class="col border-end border-3 border-success">Pérdidas fricionales de sistema (PH) &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
       <div class="col text-center m-auto" id="pf"></div>
    </div>
 </div>
