--- a/templates/widgets/dbs/createCaracteristicaVentilador.html
+++ b/templates/widgets/dbs/createCaracteristicaVentilador.html
@@ -4,7 +4,7 @@
     <div class="row h-100 justify-content-center align-items-center">
     <div class="col-6">
         <div class="card p-4">
-            <h2 class="text-center">Nueva Caracteristica del ventilador</h2>
+            <h2 class="text-center">Nuevo accesorio del ventilador</h2>
             <form method="POST">
                 {% csrf_token %}
                 {{ form }}
