--- a/templates/widgets/dbs/ducto.html
+++ b/templates/widgets/dbs/ducto.html
@@ -1,4 +1,5 @@
 {% extends "dbs.html" %}
+{% load static %}
 {% block body_content %}
 
 <div class="row h-100 justify-content-center align-items-center">
@@ -17,3 +18,6 @@
 </div>
 
 {% endblock body_content %}
+{% block body_js %}
+   <script src="{% static 'js/dbs/ducto.js' %}"></script>
+{% endblock body_js %}
