--- a/templates/widgets/fanDesignCurve/totalPreassure.html
+++ b/templates/widgets/fanDesignCurve/totalPreassure.html
@@ -3,9 +3,9 @@
 
   <div class="row">
       <div class="col ">
-         <button class="btn btn-secondary  mt-3" role="button" onclick="changeChartType('total_pressure')">Total Pressure</button>
-         <button class="btn btn-outline-secondary  mt-3 ms-1" role="button" onclick="changeChartType('static_pressure')">Static Pressure</button>
-         <button class="btn btn-outline-secondary   mt-3 ms-1" role="button" onclick="changeChartType('power')">Power</button>
+         <button class="btn btn-secondary  mt-3" role="button" onclick="changeChartType('total_pressure')">Presión total</button>
+         <button class="btn btn-outline-secondary  mt-3 ms-1" role="button" onclick="changeChartType('static_pressure')">Presión estática</button>
+         <button class="btn btn-outline-secondary   mt-3 ms-1" role="button" onclick="changeChartType('power')">Potencia</button>
       </div>
    </div>
 
